# first-triangle

./: .gitignore  Cargo.toml  flake.nix  justfile
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-4-link  flake-profile-6-link  flake-profile-7-link  flake-profile-9-link
crates/bezier/: Cargo.toml
src/: app.rs  camera.rs  core.rs  egui_context.rs  lib.rs  main.rs  model.rs  mouse.rs  point.wgsl  renderer.rs  resources.rs  shader.wgsl  texture.rs  ui.rs  window.rs
