[package]
name = "first-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22"
egui-winit = "0.22"
egui-wgpu = { version = "0.22", features = ["winit"] }

raw-window-handle = "0.5"

anyhow = "1.0.75"
bytemuck = { version =  "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
image = { version = "0.24.7", features = ["png", "jpeg"] }
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.0"
tobj = { version = "4.0.0", features = ["async"] }
cfg-if = "1.0.0"
lyon = { version = "1.0.1", features = ["extra"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
